@@ -45,6 +45,8 @@ Drupal 7.15, xxxx-xx-xx (development version)
   (API addition).
 - Fixed database errors due to ambiguous column names that occurred when
   EntityFieldQuery was used in certain situations.
+- Introduced a 'user_password_reset_timeout' variable to allow the 24-hour
+  expiration for user password reset links to be adjusted (API addition).
 
 Drupal 7.14 2012-05-02
 ----------------------
